--- a/biodata.html
+++ b/biodata.html
@@ -10,13 +10,15 @@
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Roboto:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <a href="/index.html"><img class="logo" src="/images/jollibeelogoheader.png" alt="Logo"></a>
+<header class="cf">
+    <a href="/index.html"><img class="logo" src="/images/jollibeelogoheader.png" alt="Logo"></a>
         <nav>
             <ul class="nav_bar">
+                <li><a href="https://fti.unai.edu" target="_blank" class="menubar">Website FTI UNAI</a></li>
+                <li><a href="https://unai.edu" target="_blank" class="menubar">Website UNAI</a></li>
                 <li><a href="/biodata.html" class="menubar">Biodata</a></li>
                 <li><a href="/contact_us.html" class="menubar">Contact Us</a></li>
-                <li><a href="#" class="menubar">Free</a></li>
+                <li><a href="/free.html" class="menubar">Free</a></li>
                 <li><a href="#" class="menubar">Tj</a></li>
             </ul>
         </nav>
