--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-    <header>
+    <header class="cf">
         <img class="logo" src="/images/jollibeelogoheader.png" alt="Logo">
         <nav>
             <ul class="nav_bar">
@@ -17,7 +17,7 @@
                 <li><a href="https://unai.edu" target="_blank" class="menubar">Website UNAI</a></li>
                 <li><a href="/biodata.html" class="menubar">Biodata</a></li>
                 <li><a href="/contact_us.html" class="menubar">Contact Us</a></li>
-                <li><a href="#" class="menubar">Free</a></li>
+                <li><a href="/free.html" class="menubar">Free</a></li>
                 <li><a href="#" class="menubar">Tj</a></li>
             </ul>
         </nav>
